--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "https://github.com/THE-STUDNET/crocodoc-realtime-plugin/issues"
   },
   "homepage": "https://github.com/THE-STUDNET/crocodoc-realtime-plugin#readme",
-  "peerDependencies":{
+  "dependencies":{
     "event-source-polyfill": "0.0.1",
     "viewer": "0.11.1",
   }
